<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/background">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/white"
        app:popupTheme="@color/white"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"/>

    <!-- Cuerpo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Título -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <!-- Spinners -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <!-- Spinner curso -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/curso"/>

            <Spinner
                android:id="@+id/spCurso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- Spinner ciclo -->
            <TextView
                android:id="@+id/tvCiclo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ciclo"
                android:visibility="gone"/>

            <Spinner
                android:id="@+id/spCiclo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

        </LinearLayout>

        <!-- EditText Nombre y Apellidos -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alumno"/>

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre"/>

        </LinearLayout>

        <!-- Botón Guardar -->
        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:layout_margin="5dp"/>

        <!-- ListView Alumnos -->
        <ListView
            android:id="@+id/listAlumnos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="1dp"
            android:divider="@color/blue"
            android:padding="10dp"/>

    </LinearLayout>

</LinearLayout>